[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Powers/Dash/dash_ui.png" type="Texture" id=1]
[ext_resource path="res://UI/PlayerPowers.gd" type="Script" id=2]
[ext_resource path="res://Player/Powers/DoubleJump/double_jump_ui.png" type="Texture" id=3]
[ext_resource path="res://Player/Powers/SlowMo/slowmo_ui.png" type="Texture" id=4]
[ext_resource path="res://UI/ProgressBar/ProgressBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Powers/LightsOut/lights_out_ui.png" type="Texture" id=6]
[ext_resource path="res://UI/ProgressBar/ProgressBar.gd" type="Script" id=7]

[node name="PlayerPowers" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.33371
margin_bottom = -0.33371
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = 15.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 165.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowMoProgressBar" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
margin_right = 20.0
script = ExtResource( 7 )
type = 1

[node name="LightsOutProgressBar" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 36.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 25.0
margin_right = 46.0
margin_bottom = 165.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowMo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 21.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightsOut" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 21.0
margin_bottom = 36.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dash" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 21.0
margin_bottom = 55.0
texture = ExtResource( 1 )

[node name="DoubleJump" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 21.0
margin_bottom = 76.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
